src/test/resources/public/input/typechecking/pass/pass15.jova
class Test{
private int x;

  public int testing() {
    return 0;
  }

}

class Main2 {
   private Test test;

  public int main22() {
    int test;

    //this.test.x = this.test.testing();

    return this.test.x;
  }

}